fix daySummary on mobile

--- a/src/components/DailyMealList/DaySummary/daySummary.css
+++ b/src/components/DailyMealList/DaySummary/daySummary.css
@@ -1,25 +1,37 @@
 .daySummary {
-    display: flex;
-    padding: 30px 0px;
+  display: flex;
+  padding: 30px 0px;
 }
 .daySummaryCol {
-    width: 33.333%;
+  width: 33.333%;
 }
 .daySummaryTitle {
-    font-weight: 500;
-    font-size: 18px;
-    padding-bottom: 15px;
+  font-weight: 500;
+  font-size: 18px;
+  padding-bottom: 15px;
 }
 .daySummary .nutrientsList {
-    list-style-type: none;
-    text-align: center;
+  list-style-type: none;
+  text-align: center;
 }
 .printBtn {
-    background-color: #04a701;
-    color: #fff;
-    margin-top: 30px;
-    padding: 10px 16px;
-    font-size: 14px;
-    border: none;
-    cursor: pointer;
+  background-color: #04a701;
+  color: #fff;
+  margin-top: 30px;
+  padding: 10px 16px;
+  font-size: 14px;
+  border: none;
+  cursor: pointer;
+}
+@media screen and (max-width: 600px) {
+  .daySummary {
+    flex-direction: column;
+  }
+  .daySummaryCol {
+    width: 100%;
+    text-align: center;
+  }
+  .daySummary .daySummaryCol:not(:last-child) {
+    padding-bottom: 35px;
+  }
 }
